--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -4,8 +4,16 @@ on:
   - push:
       branches:
 jobs:
-  job1:
-  job2:
-    needs: job1
-  job3:
-    needs: [job1, job2]
+  terraform:
+    name: 'Terraform'
+    runs-on: ubuntu-latest
+    steps:
+      - name: 'Checkout'
+        uses: actions/checkout@main
+      - name: 'Terraform Format'
+        uses: arwa123456/STAGEDEV@main
+        with:
+          tf_actions_version: 1.2.5
+          tf_actions_subcommand: ['init','plan','apply']
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
