--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -15,7 +15,7 @@ shell: bash
 steps:
 # Checkout the repository to the GitHub Actions runner
 - name: Checkout
-uses: actions/checkout@v2
+uses: actions/checkout@main
 # Install the latest version of Terraform CLI and configure the Terraform CLI configuration file with a Terraform Cloud user API token
 - name: Setup Terraform
 uses: hashicorp/setup-terraform@v1
