--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -10,7 +10,18 @@ jobs:
       - name: 'Terraform Format'
         uses: arwa123456/STAGEDEV@main
         with:
-          tf_actions_version: 1.2.5
-          tf_actions_subcommand: ['init','plan','apply']
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+cli_config_credentials_token: ${{ secrets.TF_API_TOKEN }}
+terraform_version: 1.0.4
+# Initialize a new or existing Terraform working directory by creating initial files, loading any remote state, downloading modules, etc.
+- name: Terraform Init
+run: terraform init
+# Checks that all Terraform configuration files adhere to a canonical format
+# - name: Terraform Format
+#  run: terraform fmt -check
+# Generates an execution plan for Terraform
+- name: Terraform Plan
+run: terraform plan
+# On push to main, build or change infrastructure according to Terraform configuration files
+- name: Terraform Apply
+if: github.ref == 'refs/heads/main' && github.event_name == 'push'
+run: terraform apply -auto-approve
