--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -11,6 +11,7 @@ jobs:
         uses: arwa123456/STAGEDEV@main
         with:
 cli_config_credentials_token: ${{ secrets.TF_API_TOKEN }}
+terraform_version: 1.0.4
 - name: Terraform Init
 run: terraform init
 # Checks that all Terraform configuration files adhere to a canonical format
