--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -11,7 +11,7 @@ jobs:
         uses: arwa123456/STAGEDEV@main
         with:
 cli_config_credentials_token: ${{ secrets.TF_API_TOKEN }}
-terraform_version: 1.2.5
+tf_actions_version: 1.2.5
 - name: Terraform Init
 run: terraform init
 # Checks that all Terraform configuration files adhere to a canonical format
