--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -10,7 +10,7 @@ jobs:
       - name: 'Terraform Format'
         uses: arwa123456/STAGEDEV@main
         with:
+        cli_config_credentials_token: ${{ secrets.TF_API_TOKEN }}
           tf_actions_version: 1.2.5
           tf_actions_subcommand: ['init','plan','apply']
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  
