--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -11,5 +11,11 @@ jobs:
         uses: arwa123456/STAGEDEV@main
         with:
         cli_config_credentials_token: ${{ secrets.TF_API_TOKEN }}
-          tf_actions_subcommand: ['init','plan','apply']
+        - name: Terraform Init
+        run: terraform init
+        - name: Terraform Plan
+        run: terraform plan
+        # On push to main, build or change infrastructure according to Terraform configuration files
+        - name: Terraform Apply
+       run: terraform apply -auto-approve
   
