--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -1,5 +1,7 @@
 name: 'Terraform GitHub Actions'
 on: [push, pull_request]
+env:
+TF_LOG: INFO
 jobs:
   terraform:
     name: 'Terraform'
@@ -10,12 +12,7 @@ jobs:
       - name: 'Terraform Format'
         uses: arwa123456/STAGEDEV@main
         with:
-        cli_config_credentials_token: ${{ secrets.TF_API_TOKEN }}
-        - name: Terraform Init
-        run: terraform init
-        - name: Terraform Plan
-        run: terraform plan
-        # On push to main, build or change infrastructure according to Terraform configuration files
-        - name: Terraform Apply
-       run: terraform apply -auto-approve
-  
+          tf_actions_version: 1.2.5
+          tf_actions_subcommand: ['init','plan','apply']
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
