--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -7,7 +7,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: 'Checkout'
-        uses: arwa123456/checkout@main
+        uses: arwa123456/STAGEDEV@main
       - name: 'Terraform Format'
         uses: arwa123456/STAGEDEV@main
         with:
