--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -22,7 +22,7 @@ jobs:
         run: terraform apply -auto-approve
         steps:
       - id: deploy
-      -  uses: arwa123456/arwastage/deploy-cloudrun@master
+      -  uses: arwa123456/arwastage/deploy-cloudrun@main
   +  uses: google-github-actions/deploy-cloudrun@main
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
