--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -7,9 +7,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: 'Checkout'
-        uses: actions/checkout@main
+        uses: actions/checkout@master
       - name: 'Terraform Format'
-        uses: arwa123456/arwastage@main   
+        uses: arwa123456/arwastage@master   
         with:
          tf_actions_version: 1.2.5
       - name: 'Terraform Init'
