--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -6,7 +6,8 @@ jobs:
     name: 'Terraform'
     runs-on: ubuntu-latest
     steps:
-     
+      - name: 'Checkout'
+        uses: terraform@main
       - name: 'Terraform Format'
         uses: arwa123456/arwastage@main   
         with:
