--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -12,7 +12,7 @@ jobs:
         uses: hashicorp/terraform-github-actions@master
         with:
          tf_actions_version: 0.12.18
-         tf_actions_subcommand: init,plan,apply
+         tf_actions_subcommand: ['init','plan','apply']
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
