--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -12,13 +12,7 @@ jobs:
         uses: hashicorp/terraform-github-actions@master
         with:
          tf_actions_version: 0.12.18
-      - name: Terraform Init
-        run: terraform init
-      - name: Terraform Plan
-        run: terraform plan
-        # On push to main, build or change infrastructure according to Terraform configuration files
-      - name: Terraform Apply
-        run: terraform apply -auto-approve
+         tf_actions_subcommand: "init"
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
