--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -12,6 +12,7 @@ jobs:
         uses: hashicorp/terraform-github-actions@master
         with:
          tf_actions_version: 0.12.18
+         cli_config_credentials_token: ${{ secrets.TF_API_TOKEN }}
       - name: Terraform Init
         run: terraform init
         env:
