--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -11,10 +11,22 @@ jobs:
       - name: 'Terraform Format'
         uses: hashicorp/terraform-github-actions@master
         with:
-         tf_actions_version: 0.12.18
+        # tf_actions_version: 0.12.18
          cli_config_credentials_token: ${{ secrets.TF_API_TOKEN }}
+      - name: Terraform Format
+        id: fmt
+        run: terraform fmt -check
       - name: Terraform Init
+        id: init
         run: terraform init
+      - name: Terraform Plan
+        id: plan
+        if: github.event_name == 'pull_request'
+        run: terraform plan -no-color -input=false
+        continue-on-error: true
+      - name: Terraform Apply
+        if: github.ref == 'refs/heads/main' && github.event_name == 'push'
+        run: terraform apply -auto-approve -input=false
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
