--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -9,7 +9,7 @@ jobs:
       - name: 'Checkout'
         uses: actions/checkout@main
       - name: 'Terraform Format'
-        uses: hashicorp/terraform-github-actions@main
+        uses: hashicorp/terraform-github-actions@master
         with:
          tf_actions_version: 0.12.18
          cli_config_credentials_token: ${{ secrets.TF_API_TOKEN }}
