--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -26,7 +26,11 @@ jobs:
         run: terraform apply -auto-approve -input=false
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
+          ARM_CLIENT_ID:  ${{secrets.TF_ARM_CLIENT_ID}}
+          ARM_CLIENT_SECRET: ${{secrets.TF_ARM_CLIENT_SECRET}}
+          ARM_SUBSCRIPTION_ID:  ${{secrets.TF_ARM_SUBSCRIPTION_ID}}
+          ARM_TENANT_ID:  ${{secrets.TF_ARM_TENANT_ID}}
+ 
       
 
      
