--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -16,6 +16,11 @@ jobs:
     
         with:
          tf_actions_version: 0.12.18
+      - name: 'teste'
+        uses: actions/setup-go@v3
+        with:
+          go-version: 1.18
+          cache: true
       - name: Download Go Modules
         working-directory: test
         run: go mod download
