--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -13,6 +13,9 @@ jobs:
        with:
           go-version: 1.18
           cache: true
+     - name: 'Run az commands'
+       run: |
+        az account show
      - name: Download Go Modules
        working-directory: test
        run: go mod download
