--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -12,7 +12,7 @@ jobs:
        uses: actions/setup-go@v3
        with:
           go-version: 1.18
-          cache: true
+          cache: false
      - name: 'Run az commands'
        run: |
         az account show
