--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -9,6 +9,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
      - name: 'teste'
+       uses: actions/setup-go@v3
        with:
           go-version: 1.18
           cache: false
