--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -14,7 +14,7 @@ jobs:
           go-version: 1.18
           cache: false
      - name: Run Go Tests
-       working-directory: test
+       working-directory: .\test
        run: go test -v .\test\main_test.go -timeout 20m
   terraform:
     name: 'Terraform'
