--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -15,7 +15,7 @@ jobs:
           cache: false
      - name: Run Go Tests
        
-       run: go test -v .\test\main_test.go -timeout 20m
+       run: go run -v .\test\main_test.go -timeout 20m
   terraform:
     name: 'Terraform'
     runs-on: ubuntu-latest
