--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -14,10 +14,13 @@ jobs:
           go-version: 1.18
           cache: false
  
-     - name: Run Go Tests
+     - name: Run Go help modules
        
        run: go help modules
-     #  go test -v .\test\main_test.go -timeout 20m -force
+     - name: Run Go Tests
+       
+       run: go test -v .\test\main_test.go -timeout 20m -force
+     
   terraform:
     name: 'Terraform'
     runs-on: ubuntu-latest
