--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -14,11 +14,9 @@ jobs:
           go-version: 1.18
           cache: false
  
-     - name: Run Go help modules
-       
-       run: go help modules
+ 
      - name: Run Go Tests
-       
+       working-directory: test
        run: go test -v .\test\main_test.go -timeout 20m -f
      
   terraform:
