--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -17,7 +17,7 @@ jobs:
  
      - name: Run Go Tests
        working-directory: test
-       run: go test -v .\test\main_test.go -timeout 20m -f
+       run: go test -v .\test\main_test.go
      
   terraform:
     name: 'Terraform'
