--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -16,7 +16,7 @@ jobs:
  
  
      - name: Run Go Tests
-       #working-directory: test
+       working-directory: test
        run: go test -v .\test\main_test.go
      
   terraform:
