--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -14,7 +14,8 @@ jobs:
           go-version: 1.18
           cache: false
  
- 
+     - name: ou je suis
+       run: pwd
      - name: Run Go Tests
        working-directory: test
        run: go test -v .\test\main_test.go
