--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -12,18 +12,7 @@ jobs:
        uses: actions/setup-go@v3
        with:
           go-version: 1.18
-          cache: false
- 
-   
-     - name: cd
- 
-       run: cd
-     - name: cd..
- 
-       run: cd
-     - name: pwd
- 
-       run: pwd
+          cache: true
        env:
           
           ARM_CLIENT_ID:  ${{secrets.TF_ARM_CLIENT_ID}}
