--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -12,9 +12,9 @@ jobs:
        uses: actions/setup-go@v3
        with:
           go-version: 1.18
-          cache: true
+         
        env:
-          
+          ARM_USE_OIDC: 1
           ARM_CLIENT_ID:  ${{secrets.TF_ARM_CLIENT_ID}}
           ARM_CLIENT_SECRET: ${{secrets.TF_ARM_CLIENT_SECRET}}
           ARM_SUBSCRIPTION_ID:  ${{secrets.TF_ARM_SUBSCRIPTION_ID}}
