--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -14,7 +14,7 @@ jobs:
           go-version: 1.18
      - name: Run Go Tests
        working-directory: test
-       run: go test -v .\test\main_test.go -f  
+       run: go test -v   
        env:
           ARM_USE_OIDC: 1
           ARM_CLIENT_ID:  ${{secrets.TF_ARM_CLIENT_ID}}
