--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -12,9 +12,12 @@ jobs:
        uses: actions/setup-go@v3
        with:
           go-version: 1.18
-     - name: Run Go Tests
-       working-directory: test
-       run: go test -v .\test\main_test.go   
+     - name: cd 
+     
+       run:  cd ../example
+     
+     
+       
        env:
           ARM_USE_OIDC: 1
           ARM_CLIENT_ID:  ${{secrets.TF_ARM_CLIENT_ID}}
