--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -14,7 +14,7 @@ jobs:
           go-version: 1.18
      - name: cd 
      
-       run:  cd ../example
+       run:  cd..
      - name: Run Go Tests
        working-directory: test
        run: go test -v .\test\main_test.go
