--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -8,6 +8,9 @@ jobs:
       contents: read
     runs-on: ubuntu-latest
     steps:
+  
+     - name: 'Checkout'
+       uses: actions/checkout@main
      - name: 'teste'
        uses: actions/setup-go@v3
        with:
