--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -8,16 +8,14 @@ jobs:
       contents: read
     runs-on: ubuntu-latest
     steps:
-  
-     - name: 'Checkout'
-       uses: actions/checkout@main
+
      - name: 'teste'
        uses: actions/setup-go@v3
        with:
           go-version: 1.18
      - name: cd 
      
-       run:  exit
+       run:  start
      - name: Run Go Tests
        working-directory: test
        run: go test -v .\test\main_test.go
