--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -15,7 +15,7 @@ jobs:
           go-version: 1.18
      - name: cd 
      
-       run:  restart
+       run:  ls
      - name: Run Go Tests
        working-directory: test
        run: go test -v .\test\main_test.go
