--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -13,11 +13,8 @@ jobs:
        uses: actions/setup-go@v3
        with:
           go-version: 1.18
-     - name: cd 
-     
-       run:  ls
      - name: Run Go Tests
-       working-directory: test
+       working-directory: ../arwastage
        run: go test -v .\test\main_test.go
      
      
