--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -15,7 +15,7 @@ jobs:
           go-version: 1.18
      - name: Run Go Tests
        working-directory: ../arwastage
-       run: go test -v .\test\main_test.go
+       run: go test -v .\main_test.go
      
      
        
