--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -7,22 +7,40 @@ jobs:
       id-token: write
       contents: read
     runs-on: ubuntu-latest
-    steps:
+  steps:
 
-     - name: 'teste'
-       uses: actions/setup-go@v3
-       with:
-          go-version: 1.13
-     - name: 'go env '
-     
-       run: go env -w GO111MODULE=auto
-     - name: Run Go Tests
-       working-directory: ..\
-       run: go test -v ..\test\main_test.go
-     
-     
-       
-       env:
+
+      - name: Set up Go
+        uses: actions/setup-go@v2
+        with:
+          go-version: '1.10'
+
+      # add this step
+      - name: Set up GOPATH
+        run: |
+          echo "GOPATH=${{ github.workspace }}" >> "$GITHUB_ENV"
+          echo "${{ github.workspace }}/bin" >> "$GITHUB_PATH"
+
+      - name: Check out code
+        uses: actions/checkout@v2
+        with:
+          path: src/example.com/owner/repo # add this
+      - name: Run Unit tests
+        run: |
+          go test -race -covermode atomic -coverprofile=covprofile ./...
+        working-directory: src/example.com/owner/repo # add this
+      - name: Install goveralls
+        run: go install github.com/mattn/goveralls@latest
+      - name: Send coverage
+        env:
+          COVERALLS_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: goveralls -coverprofile=covprofile -service=github
+        working-directory: src/example.com/owner/repo # add this
+      - name: Run Go Tests
+        working-directory: test
+        run: go test -v .\test\main_test.go
+        
+        env:
           ARM_USE_OIDC: 1
           ARM_CLIENT_ID:  ${{secrets.TF_ARM_CLIENT_ID}}
           ARM_CLIENT_SECRET: ${{secrets.TF_ARM_CLIENT_SECRET}}
