--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -10,25 +10,11 @@ jobs:
     steps:
 
 
-      - name: Set up Go
-        uses: actions/setup-go@v2
-        with:
-          go-version: '1.10'
-
-      # add this step
-      - name: Set up GOPATH
-        run: |
-          echo "GOPATH=${{ github.workspace }}" >> "$GITHUB_ENV"
-          echo "${{ github.workspace }}/bin" >> "$GITHUB_PATH"
-
-      - name: Check out code
-        uses: actions/checkout@v2
-        with:
-          path: src/example.com/owner/repo # add this
+  
       
       
       - name: Run Go Tests
-        working-directory: test
+        working-directory: ../arwasrage/code/test
         run: go test -v .\test\main_test.go
         
         env:
