--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -19,6 +19,7 @@ jobs:
         
         env:
           ARM_USE_OIDC: 1
+          ARGS: "-av"
           ARM_CLIENT_ID:  ${{secrets.TF_ARM_CLIENT_ID}}
           ARM_CLIENT_SECRET: ${{secrets.TF_ARM_CLIENT_SECRET}}
           ARM_SUBSCRIPTION_ID:  ${{secrets.TF_ARM_SUBSCRIPTION_ID}}
