--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -12,7 +12,10 @@ jobs:
 
   
       
-      
+      - name: 'teste'
+        uses: actions/setup-go@v3
+        with:
+          go-version: 1.13
       - name: Run Go Tests
         working-directory: ../arwasrage/code/test
         run: go test -v .\test\main_test.go
