--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -12,7 +12,7 @@ jobs:
 
   
       
-      - name: 'teste'
+      - name: 'test'
         uses: actions/setup-go@v3
         with:
           go-version: 1.13
