--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -9,13 +9,26 @@ jobs:
     runs-on: ubuntu-latest
     steps:
 
+      - name: setup env
+        shell: bash
+        run: |
+          echo "::set-env name=GOPATH::${{ github.workspace }}/go"
+          echo "::add-path::${{ github.workspace }}/go/bin"
 
-  
-      
-      - name: 'test'
-        uses: actions/setup-go@v3
+      - name: Install Go
+        uses: actions/setup-go@v2
         with:
-          go-version: 1.13
+          go-version: ${{ matrix.go-version }}
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Build
+        env:
+          GOPROXY: "https://proxy.golang.org"
+        run: go build .
+      
+      
+          
       - name: Run Go Tests
         
         run: go test -v .\test\main_test.go
