--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -16,7 +16,7 @@ jobs:
      
      - name: Run Go Tests
         
-       run: go test -v 
+       run: go test -v .\test\main_test.go
         
        env:
           ARM_USE_OIDC: 1
